--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastapi>=0.121.0",
     "numpy>=2.2.6",
     "opencv-python>=4.11.0.86",
+    "python-multipart>=0.0.20",
+    "uvicorn>=0.38.0",
 ]
